# factermio

./: Cargo.toml  README.md
factermio/: Cargo.toml
factermio/src/: main.rs
factermio_core/: Cargo.toml
factermio_core/src/: lib.rs
