[package]
name = "factermio_core"
version = "0.1.0"
authors = ["Tom Milligan <tom@reinfer.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.7.0"
specs = "0.16.1"
specs-derive = "0.4.1"
lazy_static = "1.4.0"
